Fix XP theme looking broken in some places

--- a/buildstuff/XP.css/base.css
+++ b/buildstuff/XP.css/base.css
@@ -46,7 +46,7 @@
     --status-font: 11px var(--ui-font);
     --sm-caption-font: bold 11px/1 var(--ui-font);
 }
-.window[data-style="wnd"] {
+.window:not([data-style="nonad"]) {
     --extra-title-height: 4px !important;
     --extra-border-size: 0px !important;
 }
